--- a/面经/面经3.md
+++ b/面经/面经3.md
@@ -1,46 +1,16 @@
 自我介绍&介绍项目；
-死磕项目实现过程和个人做了哪些事情，优化了什么，问的很细很细；
-关于线程池的一个场景题；
-Future 实现阻塞等待获取结果的原理？
-谈谈什么是零拷贝？
-一共有几种 IO 模型？NIO 和多路复用的区别？
-JDK 中的 NIO 使用的是什么模型？
-可重入锁和 Synchronized 的区别？Synchronized 的原理？可重入锁的实现原理？
-乐观锁和悲观锁， 让你来写你怎么实现？
-ReentrantLock 的实现原理？Synchronized 是个悲观锁还是乐观锁？
-Paxos 算法了解？并发提案时如何处理？
-B+树聊一下？B+树是不是有序的，怎么样的顺序？
-TCP 怎么实现拥塞控制？怎么实现重传（说了思路不过具体的实现回答的不准确）？
-看你有 JVM 调优经验，介绍下如何调优的；
-算法题：给一个无序的数组，选一个随机数，实现左边比它大，左右比大小，要求保持原有相对顺序不变；给出的实现方法时间复杂度是多少？
 
-两个有序数组求交集；
-项目介绍；
-Paxos 协议了解？工作流程是怎么样的？
-时隔太久忘记了。。
-三面
-
-两个有序数组求交集；
-二叉树如何持久化存储；
-自我介绍；
-前几次跳槽的原因？
-介绍一个有技术挑战的项目？追问项目细节，问到有点招架不住了；
-数据库分库分表的缺点是啥？
-分布式事务如何解决？TCC 了解？
-介绍下你们微服务项目的整体架构？服务间通信的原理？同步还是异步？
-RocketMQ 如何保证消息的准确性和安全性？
-
-自我介绍&项目介绍；
-介绍项目中如何使用微服务架构，个人主要负责了哪些模块，用到了哪些技术；
-HashMap 如何减少 hash 碰撞；
-什么场景需要重写 HashCode 方法；
-项目是否用到了线程池？怎么用的？常用参数有哪些？
-当线程池核心大小满了，队列满了，在提交任务会创建线程还是排队？
-谈谈对于数据库索引和约束的理解；
-数据库的时间类型（DataTime&TimeStamp）？有啥区别？分别占用多大的存储空间？
-Kafka 如何实高可用、可扩展；
-定时任务框架了解哪些（Elastic-Job、Xxl-Job、Quartz），实现原理是啥，优缺点对比；
-Apollo 实现热部署的原理；
-Redis 热 Key 如何解决？只回答了打散这一种方案
-Redis 的过期删除策略是什么？
-Spring 如何同时注入多态 Bean？提出了通过工厂获取多态实例的方案，面试官说可以集合注入；
+1、 死磕项目实现过程和个人做了哪些事情，优化了什么，问的很细很细；
+2、线程池原理、关于线程池的一个场景题；
+3、Future 实现阻塞等待获取结果的原理？
+4、谈谈什么是零拷贝？
+5、一共有几种 IO 模型？NIO 和多路复用的区别？
+6、可重入锁和 Synchronized 的区别？Synchronized 的原理？可重入锁的实现原理？
+7、乐观锁和悲观锁， 让你来写你怎么实现？
+8、ReentrantLock 的实现原理？Synchronized 是个悲观锁还是乐观锁？
+9、B+树聊一下？B+树是不是有序的，怎么样的顺序？
+10、看你有 JVM 调优经验，介绍下如何调优的；
+11、数据库分库分表的缺点是啥？
+11、分布式事务如何解决？TCC 了解？
+12、Redis 的过期删除策略是什么？
+13、Redisson分布式锁在集群模式下有什么问题，红锁了解吗，脑裂问题
