--- a/面经/面经.md
+++ b/面经/面经.md
@@ -16,7 +16,8 @@
 3. 场景问题：生产日志每天打10个G，怎么防止日志打满磁盘。
 4. 场景问题：设计不同用户角色的菜单和功能权限。
 5. 本地内存的了解。场景题：怎么实现更新所有集群中的机器中的本地内存。(我回答了rocketMQ的广播模式?)
-6. 场景问题：大量的http请求怎么识别客户的身份(根据IP和用户行为做用户标签。 和电信移动等营业商合作，根据手机号码直接获取用户信息?)
+6. 场景问题：大量的http请求怎么识别客户的身份(根据IP和用户行为做用户标签。
+   和电信移动等营业商合作，根据手机号码直接获取用户信息?)
 7. 日志区别生产和线上(标志识别（时间戳或者ip）)
 8. reactor模型的了解，它和面向结构编程的本质区别
 9. JVM的调优经历和垃圾回收
@@ -49,7 +50,8 @@
 7. AOP是在什么时候加载的，容器怎么加载bean
 8. Spring三级缓存怎么解决循环依赖
 9. mybatis拦截器动态代理底层怎么找到XML，怎么执行sql
-10. 快递订单中，有收件人和寄件人，怎么查询某个用户的快递订单(这个用户有可能是收件人也可能是寄件人)(查询：where 收件人=xx or 寄件人 =xx 用union 或者union all查询，建立组合索引)
+10. 快递订单中，有收件人和寄件人，怎么查询某个用户的快递订单(这个用户有可能是收件人也可能是寄件人)(查询：where 收件人=xx or
+    寄件人 =xx 用union 或者union all查询，建立组合索引)
 11. 敏捷开发的了解
 12. 最近看什么书，辞职理由
 
@@ -59,7 +61,7 @@
 3. RMQ保证事务一致性
 4. redis集群
 5. 算法：有一棵树，每个节点可能有多个子节点，描述这种数据结构并且遍历(第一种思路：子节点属性用集合描述：List childen;递归遍历
-第二种思路：当作变形的二叉树，左子树是一个单一节点的部分，右子树是一颗大树，遍历也要递归，复杂度很高。)
+   第二种思路：当作变形的二叉树，左子树是一个单一节点的部分，右子树是一颗大树，遍历也要递归，复杂度很高。)
 
 
 1. 项目经验
@@ -88,7 +90,7 @@
 8. JVM调优
 9. 分布式ID生成算法
 10. 秒杀场景设计，解决超卖的设计
-11. MySQL索引设计，select * from table where a=1,b= 1 and c>2  and d=3 order by e怎么索引建立
+11. MySQL索引设计，select * from table where a=1,b= 1 and c>2 and d=3 order by e怎么索引建立
 12. redis分布式锁怎么实现
 
 
